<resources>
    <string name="app_name">动画碟片销量在线</string>
    <string name="chs_name">明灯</string>
    <string name="copyright">Copyright ©2016 寒枫</string>
    <string name="author">author: 寒枫</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_message">在线留言</string>

    <string name="btn_search">搜索</string>
    <string name="home">主页</string>

    <string name="not_logged">未登录</string>

    <string name="collection">收藏</string>

    <string name="loading">加载中&#8230;</string>
    <string name="load_failed_touch_retry">加载失败，点击重试</string>
    <string name="load_failed">加载失败</string>

    <string name="click_again_to_exit">再按一次退出</string>

    <string name="no_data">暂无相关内容</string>

    <string name="search">搜索</string>

    <string name="name">名称</string>

    <string name="invalid_network">没有可用的网络，点击重试</string>
    <string name="network_error">加载失败</string>
    <string name="parse_error">内容解析失败, 不可用内容</string>

    <string name="user_info">个人资料</string>
    <string name="collection_list">收藏列表</string>
    <string name="test_record">测试记录</string>
    <string name="other_options">其他选项</string>
    <string name="share">分享</string>
    <string name="setting">设置</string>

    <string name="ok">确定</string>
    <string name="no">取消</string>

    <string name="new_bangumi_rank">2016四月新番排行&#x2009;&#x2009;&#x2009;&#x2009;&#x2009;&#x2009;&#x2009;</string>
    <string name="top_100">日亚实时TOP100</string>
    <string name="content_select">内容选择</string>

    <string name="serial_num">序号</string>
    <string name="rank">排名</string>
    <string name="situation">趋势</string>

    <string name="power_by">Power by anime-discs.com</string>

    <string name="between_update_time">距离上次更新:&#x200A;%1$s</string>

    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>>

    <string name="add_to_watch_list">添加到&quot;我的关注&quot;列表</string>
    <string name="notification_update">更新时通知我</string>
    <string name="notification_fly">爆上时通知我</string>
    <string name="notification_dive">跳水时通知我</string>
    <string name="notification_ignore_fish">不研究杂鱼</string>
    <string name="notification_top">登顶日亚时通知我</string>

    <string name="copy_rank">复制排名</string>

    <string name="notification_vibrate">推送振动</string>
    <string name="notification_sound">推送提示音</string>
    <string name="notification_light">推送提示灯</string>
    <string name="notification_head_up">推送置顶</string>
    <string name="notification_single">推送唯一</string>

    <string name="night_mode">夜间模式</string>
    <string name="block_notification">屏蔽所有推送</string>
    <string name="direction">说明</string>
    <string name="about">关于</string>

    <string name="copy">复制</string>
    <string name="copy_completed">已复制</string>

    <string name="get_data_failed">获取数据失败</string>

    <string name="rank_chart">排名趋势</string>
    <string name="series_rank">系列排名</string>
    <string name="detailed_info">详细信息</string>

    <string name="get_search_result">获取搜索结果...</string>
    <string name="get_raw_data">获取元数据...</string>

    <string name="no_available_search_result">无可用搜索结果</string>
    <string name="load_raw_data_failed">获取元数据失败</string>
    <string name="network_or_server_error">网络或服务器错误</string>

    <string name="load_cover_error">加载图片失败</string>
    <string name="none">无</string>
    <string name="no_info">无相关信息</string>
    <string name="loading_or_no_info">正在加载或无相关信息</string>

    <string name="refresh_completed">刷新完成</string>

    <string name="amazon_rank">日亚排名</string>
    <string name="five_hours_situation">5小时趋势</string>
    <string name="series">系列</string>

    <string name="translated_name">译名</string>
    <string name="original_name">原名</string>
    <string name="intro">简介</string>

    <string name="leave_message">添加留言</string>

    <string name="my_watch_list">我的关注</string>

    <string name="remove_all_notification">移除所有推送和关注</string>
    <string name="remove_completed">移除完成</string>

    <string name="not_disturb">00:00-8:00免打扰</string>

    <string name="share_text">动画碟片销量在线:) http://112.74.204.89/Uploads/light.apk</string>

    <string name="copy_series_rank">复制系列排名</string>

    <string name="instruction">说明</string>
    <string name="instruction_text">这个人很懒，暂时还没有写~\n寒枫出品</string>

    <string name="copy_visible_item">复制可见项的排名</string>

    <string name="search_hint">请输入搜索关键词</string>

    <string name="other_settings">其他设置</string>

    <string name="fly_scale">爆上比例：</string>
    <string name="fly_scale_intro">计算公式：(前排名 - 现排名) / 前排名 = 变化比例，当变化比例 >= 爆上比例，为爆上事件</string>
    <string name="dive_scale">跳水比例：</string>
    <string name="dive_scale_intro">计算公式：(现排名 - 前排名) / 前排名 = 变化比例，当变化比例 >= 跳水比例，为跳水事件</string>
    <string name="fish_line">杂鱼线：</string>
    <string name="fish_line_intro">当排名低于杂鱼线时，将不会推送</string>
    <string name="top_line">登顶线：</string>
    <string name="top_line_intro">当排名 >= 登顶线，且前排名不等于现排名时，为爆上事件</string>
    <string name="setting_ok">设置成功</string>

</resources>
