<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tl="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <RelativeLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="223dp">

        <com.daimajia.swipe.SwipeLayout
            android:id="@+id/swipe_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingPrefix">

            <ImageView
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="223dp"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:contentDescription="@null"
                android:foreground="@drawable/ripple_blue_bg"
                android:scaleType="centerCrop"
                android:src="@mipmap/banner"/>

            <ImageView
                android:id="@+id/banner2"
                android:layout_width="match_parent"
                android:layout_height="223dp"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:contentDescription="@null"
                android:foreground="@drawable/ripple_blue_bg"
                android:scaleType="centerCrop"
                android:src="@mipmap/banner2"/>

        </com.daimajia.swipe.SwipeLayout>

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_view"
            style="@style/SpinKitView.WanderingCubes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:visibility="gone"
            app:SpinKit_Color="@color/PeterRiver"/>

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:layout_marginStart="10dp"-->
        <!--android:lineSpacingMultiplier="1.2"-->
        <!--android:layout_marginBottom="5dp"-->
        <!--android:layout_marginTop="65dp"-->
        <!--android:alpha="0.7"-->
        <!--android:textSize="11sp"-->
        <!--android:text=""/>-->

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="29dp">

        <TextView
            android:id="@+id/update_time"
            fontPath="fonts/gothicb.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="14dp"
            android:alpha="0.8"
            android:textColor="@color/soft_black"
            android:textSize="12sp"/>
    </RelativeLayout>

    <com.flyco.tablayout.SlidingTabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="@android:color/white"
        android:theme="@style/ListEdgeOverlayTheme"
        tl:tl_indicator_width="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            fontPath="fonts/cf_ghost_stories.ttf"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="14dp"
            android:gravity="center"
            android:text="@string/serial_num"
            android:textColor="@color/unselected_grey"
            android:textSize="12sp"/>

        <ImageView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_arrow_drop_down_black_24dp"
            android:tint="@color/unselected_grey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:text="@string/rank"
            android:textColor="@color/unselected_grey"
            android:textSize="12sp"/>

        <ImageView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_arrow_drop_down_black_24dp"
            android:tint="@color/unselected_grey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="rtl">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_arrow_drop_down_black_24dp"
                android:tint="@color/unselected_grey"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/situation"
                android:textColor="@color/unselected_grey"
                android:textSize="12sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="22dp"
                android:layoutDirection="ltr"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:layoutDirection="ltr"
                    android:maxLines="2"
                    android:text="@string/name"
                    android:textColor="@color/unselected_grey"/>

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_arrow_drop_down_black_24dp"
                    android:tint="@color/unselected_grey"/>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

</LinearLayout>